(bugfix) The anyvan slider on tablets was to high

--- a/src/state-components-mobile/portfolio/anyvan/_anyvan.scss
+++ b/src/state-components-mobile/portfolio/anyvan/_anyvan.scss
@@ -14,7 +14,7 @@
 
 #anyvan-portfolio-page .large-only {
   .full-width-slider {
-    height: 597px;
+    height: 512px;
     width: 100%;
   }
 
